Add two instruments and canon midi example

--- a/public/player/index.html
+++ b/public/player/index.html
@@ -48,6 +48,7 @@
           <ul class="dropdown-menu" role="menu">
             <li><a data-song="la_campanella_pi.mid" href="#">la_campanella_pi</a></li>
             <li><a data-song="wedding.mid" href="#">wedding</a></li>
+            <li><a data-song="pachelbel_canon.mid" href="#">Pachelbel Canon</a></li>
           </ul>
         </div>
       </div>
