--- a/public/player/index.html
+++ b/public/player/index.html
@@ -29,7 +29,7 @@
   </head>
   <body>
     <!-- STEP 0 loading -->
-    <div class="panel panel-default step-0">
+    <div class="panel panel-primary step-0">
       <div class="panel-heading">Loading</div>
       <div class="panel-body">
         <img class="app-loading" src="../images/loading.gif"/>
@@ -37,12 +37,12 @@
     </div>
 
     <!-- STEP 1 -->
-    <div class="panel panel-default step-1">
+    <div class="panel panel-primary step-1">
       <div class="panel-heading">Step 1: Please Choose a Song</div>
-      <div class="panel-body">
+      <div class="container panel-body">
         <!-- song button -->
         <div class="btn-group">
-          <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
+          <button type="button" class="btn btn-default dropdown-toggle song-toggle" data-toggle="dropdown">
             Choose a Song <span class="caret"></span>
           </button>
           <ul class="dropdown-menu" role="menu">
@@ -50,11 +50,16 @@
             <li><a data-song="wedding.mid" href="#">wedding</a></li>
           </ul>
         </div>
+        <button type="button" class="btn btn-primary song-confirm">Go</button>
+        <div></div>
+        <div class="well preview-box">
+          <audio class="preview-audio" controls>
+        </div>
       </div>
     </div>
 
     <!-- Step 2 QR Code -->
-    <div class="panel panel-default step-2">
+    <div class="panel panel-primary step-2">
       <div class="panel-heading">Step 2: Scan QR Code</div>
       <div class="panel-body">
         <!-- QR Code -->
@@ -64,7 +69,7 @@
     </div>
 
     <!-- Step 3 MIDI Player -->
-    <div class="panel panel-default step-3">
+    <div class="panel panel-primary step-3">
       <div class="panel-body">
         
       </div>
