--- a/public/player/index.html
+++ b/public/player/index.html
@@ -13,6 +13,8 @@
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.2/js/bootstrap.min.js"></script>
     <script src="../js/jasmid/stream.js" type="text/javascript"></script>
     <script src="../js/jasmid/midifile.js" type="text/javascript"></script>
+    <!-- jquery module for qrcode -->
+    <script src="../js/jquery.qrcode-0.7.0.min.js"></script>
     <!-- MIDI.js -->
     <script src="../js/MIDI.js/js/MIDI/Player.js" type="text/javascript"></script>
     <script src="../js/MIDI.js/js/MIDI/AudioDetect.js" type="text/javascript"></script>
@@ -66,6 +68,7 @@
         <!-- QR Code -->
         <img class="qr-loading" src="../images/loading.gif"/>
         <div id="group-id"></div>
+        <div class="qrcode-group-id"></div>
       </div>
     </div>
 
