Added canvas to player

--- a/public/conductor/index.html
+++ b/public/conductor/index.html
@@ -4,11 +4,9 @@
 	<meta charset="UTF-8">
 	<title>Conductor</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<script src="../js/conductor.js"></script>
 	<link rel="stylesheet" href="../css/conductor.css">
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap-theme.min.css">
-
 </head>
 <body>
 <div class="container">
@@ -20,8 +18,9 @@
 	  </div>
 	  <a id="join" href="#" class="btn btn-primary">join</a>
 	</form>
-</form>
 </div>
+<script src="../js/mobile-motion.js"></script>
+<script src="../js/conductor.js"></script>
 <script src="https://code.jquery.com/jquery.js"></script>
 <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.2/js/bootstrap.min.js"></script>
 </body>
