--- a/public/player/index.html
+++ b/public/player/index.html
@@ -11,6 +11,7 @@
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://code.jquery.com/jquery.js"></script>
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.2/js/bootstrap.min.js"></script>
+    <script src="../js/mobile-motion.js" type="text/javascript"></script>
     <script src="../js/jasmid/stream.js" type="text/javascript"></script>
     <script src="../js/jasmid/midifile.js" type="text/javascript"></script>
     <!-- jquery module for qrcode -->
@@ -75,8 +76,9 @@
     <!-- Step 3 MIDI Player -->
     <div class="panel panel-primary step-3">
       <div class="panel-body">
-        
+
       </div>
     </div>
+    <canvas id="canvas" height="300" width="800"></canvas>
   </body>
 </html>
