--- a/public/player/index.html
+++ b/public/player/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="../css/mozart-player.css">
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://code.jquery.com/jquery.js"></script>
+    <script src="../js/jquery.browser.min.js"></script>
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.2/js/bootstrap.min.js"></script>
     <script src="../js/mobile-motion.js" type="text/javascript"></script>
     <script src="../js/jasmid/stream.js" type="text/javascript"></script>
