--- a/public/player/index.html
+++ b/public/player/index.html
@@ -53,6 +53,7 @@
             <li><a data-song="la_campanella_pi.mid" href="#">la_campanella_pi</a></li>
             <li><a data-song="wedding.mid" href="#">wedding</a></li>
             <li><a data-song="pachelbel_canon.mid" href="#">Pachelbel Canon</a></li>
+            <li><a data-song="bumblebee.mid" href="#">Bumblebee</a></li>
           </ul>
         </div>
         <button type="button" class="btn btn-primary song-confirm">Go</button>
