add support to join a group

--- a/public/player/index.html
+++ b/public/player/index.html
@@ -78,7 +78,7 @@
     <!-- Step 3 MIDI Player -->
     <div class="panel panel-primary step-3">
       <div class="panel-body">
-
+      You are joined to another group...
       </div>
     </div>
     <canvas id="canvas" height="300" width="800"></canvas>
