--- a/public/player/player-test.html
+++ b/public/player/player-test.html
@@ -24,6 +24,7 @@
     <button class="midi-btn" data-src="../midi/wedding.mid" type="button">Dreams Wedding</button>
     <button class="midi-btn" data-src="../midi/pachelbel_canon.mid" type="button">canon</button>
     <button class="midi-btn" data-src="../midi/bumblebee.mid" type="button">bumblebee</button>
+    <button class="midi-btn" data-src="../midi/turkish_match.mid" type="button">turkish_match</button>
     <hr>
     <section id="message-section">
       <label id="message"></label>
