Added ready button

--- a/public/conductor/index.html
+++ b/public/conductor/index.html
@@ -17,6 +17,7 @@
 	    <input type="text" class="form-control" id="group-id" placeholder="Enter group code">
 	  </div>
 	  <a id="join" href="#" class="btn btn-primary">join</a>
+	    <button id="ready" type="button" class="btn btn-primary">Ready</button>
 	</form>
 </div>
 <script src="../js/mobile-motion.js"></script>
