add multiple device time sync

--- a/public/player/index.html
+++ b/public/player/index.html
@@ -30,6 +30,8 @@
     <script src="../js/midi-channel.js" type="text/javascript"></script>
     <script src="../js/replayer.js" type="text/javascript"></script>
     <script src="../js/mozart-player.js"></script>
+    <!-- time sync -->
+    <script src="../js/NTP.js"></script>
   </head>
   <body>
     <!-- STEP 0 loading -->
