--- a/public/test_client.html
+++ b/public/test_client.html
@@ -5,6 +5,13 @@
 </head>
 
 <body>
+  <header class="navbar navbar-default navbar-fixed-top" role="navigation">
+    <div class="container">
+      <div class="navbar-header">
+        <a href="/public/player/" class="navbar-brand">Mozart</a>
+      </div>
+    </div>
+  </header>
   <div id="result"></div>
   <h1>Join group</h1>
   <input id="groupId" />
