--- a/public/conductor/index.html
+++ b/public/conductor/index.html
@@ -27,6 +27,7 @@
 </div>
 <script src="../js/mobile-motion.js"></script>
 <script src="../js/conductor.js"></script>
+<script src="../js/ua-parser.min.js"></script>
 <script src="https://code.jquery.com/jquery.js"></script>
 <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.2/js/bootstrap.min.js"></script>
 </body>
