Added logo for player page

--- a/public/player/index.html
+++ b/public/player/index.html
@@ -44,7 +44,7 @@
     <div class="placeholder1"></div>
     <div class="mozart-header">
       <div class="container">
-        <h1>Mozart</h1>
+        <h1><span></span>Mozart</h1>
         <p>Being a conductor instantly!
       </div>
     </div>
