UI Polish round #3

--- a/public/player/index.html
+++ b/public/player/index.html
@@ -106,10 +106,10 @@
       </div>
 
       <div class="panel panel-primary step-4">
-        <div class="panel-heading">Music start!</div>
+        <div class="panel-heading">Ready for couduct!</div>
         <div class="panel-body">
-          <p>Now playing</p>
-          <h1 id="playingTitle">Title</h1>
+          <p id='playStatus'>Now loading...</p>
+          <h1 class="playingTitle">Title</h1>
         </div>
       </div>
 
@@ -117,6 +117,12 @@
         <div class="panel-heading">Shake your device to conduct!</div>
         <div class="panel-body">
           <canvas id="canvas" height="300" width="800"></canvas>
+        </div>
+      </div>
+      <div class="loading_stub">
+        <div class="container">
+            <p>Get ready</p>
+            <h1 class="playingTitle">songTitle</h1>
         </div>
       </div>
     </div>
