--- a/public/player/index.html
+++ b/public/player/index.html
@@ -73,6 +73,7 @@
               <li><a data-song="pachelbel_canon.mid" href="#">Pachelbel Canon</a></li>
               <li><a data-song="bumblebee.mid" href="#">Bumblebee</a></li>
               <li><a data-song="turkish_match.mid" href="#">Turkish match</a></li>
+              <li><a data-song="StarWars2.mid" href="#">Star War</a></li>
             </ul>
           </div>
           <button type="button" class="btn btn-primary song-confirm">Go</button>
