Added speed dashboard

--- a/public/player/index.html
+++ b/public/player/index.html
@@ -117,6 +117,7 @@
       <div class="panel panel-primary" id="canvas-container">
         <div class="panel-heading">Shake your device to conduct!</div>
         <div class="panel-body">
+          <div id="speed-dashboard"><div></div></div>
           <canvas id="canvas" height="300" width="800"></canvas>
         </div>
       </div>
