Add demo song : symphony of destiny

--- a/public/player/index.html
+++ b/public/player/index.html
@@ -78,6 +78,7 @@
               <li><a data-song="bumblebee.mid" href="#">Bumblebee</a></li>
               <li><a data-song="turkish_match.mid" href="#">Turkish match</a></li>
               <li><a data-song="StarWars2.mid" href="#">Star War</a></li>
+              <li><a data-song="symphony_of_destiny.mid" href="#">Symphony of Destiny</a></li>
             </ul>
           </div>
           <button type="button" class="btn btn-primary song-confirm">Go</button>
