add last page for voting

--- a/public/player/index.html
+++ b/public/player/index.html
@@ -40,6 +40,9 @@
   <body>
     <header class="navbar navbar-default navbar-fixed-top" role="navigation">
       <div class="container">
+        <div class="navbar-brand">
+          <iframe src="http://nodeknockout.com/iframe/mozart" frameborder=0 scrolling=no allowtransparency=true width=115 height=25></iframe>
+        </div>
         <div class="navbar-header">
           <a href="/public/player/" class="navbar-brand">Mozart</a>
         </div>
@@ -116,6 +119,16 @@
         <div class="panel-body">
           <p id='playStatus'>Now loading...</p>
           <h1 class="playingTitle">Title</h1>
+        </div>
+      </div>
+
+      <div class="panel panel-primary step-5">
+        <div class="panel-heading">Thanks for Your Play</div>
+        <div class="panel-body">
+          <div class="container">
+            <h1><span></span>Please Vote for Us:</h1>
+            <iframe src="http://nodeknockout.com/iframe/mozart" frameborder=0 scrolling=no allowtransparency=true width=115 height=25></iframe>
+          </div>
         </div>
       </div>
 
