Added Score dashboard

--- a/public/player/index.html
+++ b/public/player/index.html
@@ -121,9 +121,13 @@
 
       <div class="panel panel-primary" id="canvas-container">
         <div class="panel-heading">Shake your device to conduct!</div>
-        <div class="panel-body">
-          <div id="speed-dashboard"><div></div></div>
-          <canvas id="canvas" height="300" width="800"></canvas>
+        <div class="panel-body" id="dashboard">
+          <div class="left-block">
+            <div id="speed-dashboard"><div></div></div>
+            <canvas id="canvas" height="300" width="800"></canvas>
+          </div>
+          <div class="right-block score"><span>Your score: </span><div>0</div></div>
+
         </div>
       </div>
       <div class="loading_stub">
