--- a/public/player/index.html
+++ b/public/player/index.html
@@ -128,6 +128,9 @@
           <div class="container">
             <h1><span></span>Please Vote for Us:</h1>
             <iframe src="http://nodeknockout.com/iframe/mozart" frameborder=0 scrolling=no allowtransparency=true width=115 height=25></iframe>
+            <div class="container" align="center">
+              <button type="button" class="btn btn-primary restart-button">Restart</button>
+            </div>
           </div>
         </div>
       </div>
