--- a/public/player/index.html
+++ b/public/player/index.html
@@ -44,7 +44,7 @@
           <iframe src="http://nodeknockout.com/iframe/mozart" frameborder=0 scrolling=no allowtransparency=true width=115 height=25></iframe>
         </div>
         <div class="navbar-header">
-          <a href="/public/player/" class="navbar-brand">Mozart</a>
+          <a href="index.html" class="navbar-brand">Mozart</a>
         </div>
       </div>
     </header>
