add browser compability check

--- a/public/player/index.html
+++ b/public/player/index.html
@@ -169,5 +169,8 @@
         </li>
       </ul>
     </div>
+    <div id="browserCompability">
+      This site uses webAudio technology. Browser version above Chrome 29 / Firefox 25 is suggested to use.
+    </div>
   </body>
 </html>
