add link to open more player

--- a/public/player/index.html
+++ b/public/player/index.html
@@ -118,6 +118,8 @@
         <div class="panel-body">
           <p>Press ready button on conductor device once all instrument player joined.</p>
           <h1 class="playingTitle">Title</h1>
+          <p>Using other devices to be multiple instruments: 
+              <a class="group-link" target="_blank"></a></p>
         </div>
       </div>
 
