use packaged version instead of loading from internet

--- a/public/conductor/index.html
+++ b/public/conductor/index.html
@@ -5,8 +5,8 @@
 	<title>Conductor</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="../css/conductor.css">
-	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
-	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap-theme.min.css">
+	<link rel="stylesheet" href="../css/bootstrap.min.css">
+	<link rel="stylesheet" href="../css/bootstrap-theme.min.css">
 </head>
 <body>
 <div class="container">
@@ -28,7 +28,7 @@
 <script src="../js/mobile-motion.js"></script>
 <script src="../js/conductor.js"></script>
 <script src="../js/ua-parser.min.js"></script>
-<script src="https://code.jquery.com/jquery.js"></script>
-<script src="//netdna.bootstrapcdn.com/bootstrap/3.0.2/js/bootstrap.min.js"></script>
+<script src="../js/jquery.min.js"></script>
+<script src="../js/bootstrap.min.js"></script>
 </body>
 </html>
