--- a/public/player/index.html
+++ b/public/player/index.html
@@ -4,22 +4,22 @@
     <meta charset="utf-8" />
     <title>MIDI Player</title>
     <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootswatch/3.0.1/flatly/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
     <!-- Optional theme -->
     <!--<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap-theme.min.css">-->
     <link rel="stylesheet" href="../css/social-bar.css">
     <link rel="stylesheet" href="../css/mozart-player.css">
     <!-- Latest compiled and minified JavaScript -->
-    <script src="https://code.jquery.com/jquery.js"></script>
+    <script src="../js/jquery.min.js"></script>
     <script src="../js/jquery.browser.min.js"></script>
-    <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.2/js/bootstrap.min.js"></script>
+    <script src="../js/bootstrap.min.js"></script>
     <script src="../js/mobile-motion.js" type="text/javascript"></script>
     <script src="../js/jasmid/stream.js" type="text/javascript"></script>
     <script src="../js/jasmid/midifile.js" type="text/javascript"></script>
     <!-- jquery module for qrcode -->
     <script src="../js/jquery.qrcode-0.7.0.min.js"></script>
     <!-- share bar -->
-    <script src="../js/socialite.min.js"></script>    
+    <script src="../js/socialite.min.js"></script>
     <!-- MIDI.js -->
     <script src="../js/MIDI.js/js/MIDI/Player.js" type="text/javascript"></script>
     <script src="../js/MIDI.js/js/MIDI/AudioDetect.js" type="text/javascript"></script>
@@ -40,9 +40,6 @@
   <body>
     <header class="navbar navbar-default navbar-fixed-top" role="navigation">
       <div class="container">
-        <div class="navbar-brand">
-          <iframe src="http://nodeknockout.com/iframe/mozart" frameborder=0 scrolling=no allowtransparency=true width=115 height=25></iframe>
-        </div>
         <div class="navbar-header">
           <a href="index.html" class="navbar-brand">Mozart</a>
         </div>
@@ -118,7 +115,7 @@
         <div class="panel-body">
           <p>Press ready button on conductor device once all instrument player joined.</p>
           <h1 class="playingTitle">Title</h1>
-          <p>Using other devices to be multiple instruments: 
+          <p>Using other devices to be multiple instruments:
               <a class="group-link" target="_blank"></a></p>
         </div>
       </div>
